finished the footer

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <p class="footer-content">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
